Day 11:  **Personal portfolio Webpage** - Added first HTML to Index Page

--- a/Projects/WebDevCert/PersonalPortfolio/index.html
+++ b/Projects/WebDevCert/PersonalPortfolio/index.html
@@ -10,6 +10,7 @@
         <nav id="nav-wrap">
 
             <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
+
             <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 
             <ul id="nav" class="nav">
@@ -24,7 +25,9 @@
         </nav> <!-- end #nav-wrap -->
 
         <div class="row banner">
+
             <div class="banner-text">
+
                 <h1 class="responsive-headline">Dominic Gerweck</h1>
                 <h3>
                     Hello and welcome! I'm a well trained <span>draftsman </span>in the field of architecture, and now a <span>career changers </span> in app developpment. <br />
@@ -32,7 +35,6 @@
                     Let's <a class="smoothscroll" href="#about">start scrolling</a>
                     and learn more <a class="smoothscroll" href="#about">about me</a>.
                 </h3>
-                <hr />
 
             </div>
         </div>
@@ -47,7 +49,6 @@
     <section id="about">
 
         <div class="row">
-
             <div class="three columns">
 
                 <img class="profile-pic" src="images/Me.jpg" alt="Me" />
@@ -58,21 +59,18 @@
 
                 <h2>About Me</h2>
 
-                <p>
-                    I was born on April 10, 1983 in a small Town called Bretten (Landkreis Karlsruhe in Germany).
-                </p>
+                <p>I was born on April 10, 1983 in a small Town called Bretten (Landkreis Karlsruhe in Germany).</p>
                 <p>
                     Since 2003 I worked as a draftsman in the field of architecture. My last main focus was on
                     handling the announcement and leading the construction management. In 2017 I moved frome Karlsruhe to Verden (Aller).
                 </p>
-                <p> <b>Now I'm looking for an apprenticeship as IT specialist for application development.</b></p>
-
+                <p><b>Now I'm looking for an apprenticeship as IT specialist for application development.</b></p>
 
                 <div class="row">
-
                     <div class="columns contact-details">
 
                         <h2>Contact Details</h2>
+
                         <p class="address">
                             <span>Dominic Gerweck</span><br>
                             <span>
@@ -96,7 +94,6 @@
             </div> <!-- end .main-col -->
         </div>
 
-
     </section> <!-- About Section End-->
     <!-- Resume Section
     ================================================== -->
@@ -118,14 +115,12 @@
 
                         <h3>Training as a draftsman (architecture)</h3>
                         <p class="info">graduation and additional qualification for "AVA"<span>&bull;</span> <em class="date">July 2003</em></p>
-
                         <p>
                             - sketches and work plans HOAI LP 1 to 4<br />
                             - 3D visualization and graphic design for sale exposés<br />
                             - Mass determination for tenders<br />
                             - Preparing the energy requirement pass<br />
                         </p>
-
 
                     </div>
 
@@ -138,9 +133,7 @@
                         <h3>Vocational School Verden</h3>
                         <p class="info">degree in civil engineering basics <span>&bull;</span> <em class="date">July 2001</em></p>
 
-                        <p>
-                            One-year education in civil engineering basics as a prerequisite for the Training as a draftsman.
-                        </p>
+                        <p>One-year education in civil engineering basics as a prerequisite for the Training as a draftsman.</p>
 
                     </div>
 
@@ -153,15 +146,14 @@
                         <h3>Secondary School Dörverden</h3>
                         <p class="info">secondary school certificate <span>&bull;</span> <em class="date">July 2000</em></p>
 
-
-
                     </div>
 
                 </div> <!-- item end -->
 
             </div> <!-- main-col end -->
 
-        </div> <!-- End Education -->
+        </div>
+        <!-- End Education -->
         <!-- Work
         ================================================== -->
         <div class="row work">
@@ -188,14 +180,12 @@
 
                 </div> <!-- item end -->
 
-
-
                 <div class="row item">
 
                     <div class="twelve columns">
 
                         <h3>Engineering Office H.-D. Fritz in Bretten</h3>
-                        <p class="info">junior Construction Manager <span>&bull;</span> <em class="date">t 2012 - Dec 2016</em></p>
+                        <p class="info">junior Construction Manager <span>&bull;</span><em class="date">t 2012 - Dec 2016</em></p>
 
                         <p>
                             During my employment I had the great chance to take high responsibility during the 2 years General-Renovation
@@ -240,7 +230,8 @@
 
             </div> <!-- main-col end -->
 
-        </div> <!-- End Work -->
+        </div>
+        <!-- End Work -->
         <!-- Skills
         ================================================== -->
         <div class="row skill">
@@ -278,7 +269,8 @@
 
         </div> <!-- End skills -->
 
-    </section> <!-- Resume Section End-->
+    </section>
+    <!-- Resume Section End-->
     <!-- Portfolio Section
     ================================================== -->
     <section id="portfolio">
@@ -360,19 +352,16 @@
                         </div>
                     </div> <!-- item end -->
 
-
-
                 </div> <!-- portfolio-wrapper end -->
 
-            </div> <!-- twelve columns end -->
+            </div>
+            <!-- twelve columns end -->
             <!-- Modal Popup
                 ================================================== -->
 
             <div id="modal-01" class="popup-modal mfp-hide">
 
                 <img class="scale-with-grid" src="images/portfolio/modals/UDEMY-m.jpg" alt="" />
-
-
 
                 <div class="link-box">
                     <a class="popup-modal-dismiss">Close</a>
@@ -383,8 +372,6 @@
             <div id="modal-02" class="popup-modal mfp-hide">
 
                 <img class="scale-with-grid" src="images/portfolio/modals/CFM-m.jpg" alt="" />
-
-
 
                 <div class="link-box">
 
@@ -397,8 +384,6 @@
 
                 <img class="scale-with-grid" src="images/portfolio/modals/HHS_Zertifikat-m.jpg" alt="" />
 
-
-
                 <div class="link-box">
 
                     <a class="popup-modal-dismiss">Close</a>
@@ -410,8 +395,6 @@
 
                 <img class="scale-with-grid" src="images/portfolio/modals/IHK_nemetschek-m.jpg" alt="" />
 
-
-
                 <div class="link-box">
 
                     <a class="popup-modal-dismiss">Close</a>
@@ -421,7 +404,8 @@
 
         </div> <!-- row End -->
 
-    </section> <!-- Portfolio Section End-->
+    </section>
+    <!-- Portfolio Section End-->
     <!-- Testimonials Section
     ================================================== -->
     <section id="testimonials">
@@ -445,11 +429,9 @@
                             <li>
                                 <blockquote>
                                     <p>
-
                                         Software innovation, like almost every other kind of innovation, requires the ability to collaborate
                                         and share ideas with other people, and to sit down and talk with customers and get their feedback and
                                         understand their needs.
-
                                     </p>
                                     <cite>Bill Gates</cite>
                                 </blockquote>
@@ -458,7 +440,6 @@
                             <li>
                                 <blockquote>
                                     <p>
-                                        <br /><br />
                                         This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                                         Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
                                         nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
@@ -477,7 +458,8 @@
 
         </div>  <!-- text-container ends -->
 
-    </section> <!-- Testimonials Section End-->
+    </section>
+    <!-- Testimonials Section End-->
     <!-- Contact Section
     ================================================== -->
     <section id="contact">
@@ -536,7 +518,6 @@
                       </span>
                     </div>
 
-
                   </fieldset>
                 </form>-->
                 <!-- Form End -->
@@ -557,11 +538,10 @@
                     <input type="text" name="subject" size=40>
                 <p>
                     <b>Message</b><br>
-<textarea cols=40 rows=10 name="message"></textarea>
-                <p><input type="submit" value=" Send ">
+                    <textarea cols=40 rows=10 name="message"></textarea>
+                <p>
+                    <input type="submit" value=" Send ">
             </form>
-
-
 
             <aside class="four columns footer-widgets">
 
@@ -578,12 +558,12 @@
 
                 </div>
 
-
             </aside>
 
         </div>
 
-    </section> <!-- Contact Section End-->
+    </section>
+    <!-- Contact Section End-->
     <!-- footer
     ================================================== -->
     <footer>
@@ -604,6 +584,7 @@
 
         </div>
 
-    </footer> <!-- Footer End-->
+    </footer>
+    <!-- Footer End-->
 </body>
 </html>
