Changed Colors Added Responsive Web Design Principles

--- a/Projects/WebDevCert/TributePage/Index.html
+++ b/Projects/WebDevCert/TributePage/Index.html
@@ -14,17 +14,17 @@
         }
 
         body {
-            color: #FFF;
-            background-color: #636363;
+            color: #F6F7F5;
+            background-color: #9E9B9F;
         }
+
 
         p:focus {
-            Tabindex: "0";
         }
 
 
-        /*#main {
-            background-color: white;
+        #main {
+            background-color: #7B7C7B;
             text-align: center;
             max-width: 100%;
             width: auto;
@@ -33,34 +33,36 @@
         }
 
         #title {
-            background-color: #2e2d2e;
+            background-color: #383338;
             color: #f5f4f1;
             margin: 0px;
             padding: 0px;
         }
 
         div {
-            background-color: #F5F4F1;
-            margin: 0px;
-            padding: 0px;
+            background-color: #9E9B9F;
+            position: relative;
+            max-width: 100%;
+            height: auto;
         }
 
         #img-div {
-            background-color: #a95559;
-            margin: 55px;
-            padding: 25px;
+            position: relative;
+            max-width: 100%;
+            height: auto;
+            background-color: #C07548;
+            margin: 15px;
+            padding: 15px;
         }
 
         #image {
             position: relative;
-            top: auto;
-            right: auto;
-            bottom: auto;
-            left: auto;
             max-width: 100%;
-            width: auto;
-            margin: 0px;
-            padding: 0px;
+            height: auto;
+            border-radius: 50%;
+            border: 25px;
+            border-style: double;
+            border-color: #65a968;
         }
 
         ul {
@@ -79,7 +81,15 @@
             margin: 0px;
             padding: 0px;
             background-color: #2e2d2e;
-        }*/
+        }
+
+        h2 {
+            width: 80vw;
+        }
+
+        p {
+            width: 75vmin;
+        }
     </style>
 </head>
 <body>
