--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="utf-8" />
     <title>Survey Form</title>
+    <style>
+        #box-container {
+            height: 500px;
+            display: flex;
+        }
+
+        #box-1 {
+            background-color: dodgerblue;
+            width: 50%;
+            height: 50%;
+        }
+
+        #box-2 {
+            background-color: orangered;
+            width: 50%;
+            height: 50%;
+        }
+    </style>
 </head>
 <body>
-
     <h1>Survey Form</h1>
 
-    <p>Hello World!</p>
-
+    <div id="box-container">
+        <div id="box-1"></div>
+        <div id="box-2"></div>
+    </div>
 </body>
 </html>
