Merry Christmas ! #100DaysOfCode - Day 16

--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -103,6 +103,8 @@
     <h1>Survey Form</h1>
     <h2>Flex Box Tutorial</h2>
 
+    <h2>Merry Christmas !!!</h2>
+
     <div id="box-container">
         <div id="box-1"></div>
         <div id="box-2"></div>
