--- a/Projects/QuizAApp/index.html
+++ b/Projects/QuizAApp/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link href="css/style.css" rel="stylesheet" />
+
     <title>Quiz App</title>
 </head>
 <body>
