--- a/Projects/WebDevCert/SurveyForm/index.html
+++ b/Projects/WebDevCert/SurveyForm/index.html
@@ -1,143 +1,71 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Survey Form</title>
-    <style>
-        #box-container {
-            background: gray;
-            display: flex;
-            height: 500px;
-            justify-content: center;
-        }
+  <meta charset="utf-8">
+  <title>Quick Quiz</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-        #box-1 {
-            background-color: dodgerblue;
-            width: 25%;
-            height: 100%;
-        }
-
-        #box-2 {
-            background-color: orangered;
-            width: 25%;
-            height: 100%;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            display: flex;
-            flex-direction: row;
-        }
-
-            header .profile-thumbnail {
-                width: 50px;
-                height: 50px;
-                border-radius: 4px;
-            }
-
-            header .profile-name {
-                display: flex;
-                flex-direction: column;
-                margin-left: 10px;
-            }
-
-            header .follow-btn {
-                display: flex;
-                margin: 0 0 0 auto;
-            }
-
-                header .follow-btn button {
-                    border: 0;
-                    border-radius: 3px;
-                    padding: 5px;
-                }
-
-            header h3, header h4 {
-                display: flex;
-                margin: 0;
-            }
-
-        #inner p {
-            margin-bottom: 10px;
-            font-size: 20px;
-        }
-
-        #inner hr {
-            margin: 20px 0;
-            border-style: solid;
-            opacity: 0.1;
-        }
-
-        footer {
-            display: flex;
-            flex-direction: row;
-        }
-
-            footer .stats {
-                display: flex;
-                font-size: 15px;
-            }
-
-                footer .stats strong {
-                    font-size: 18px;
-                }
-
-                footer .stats .likes {
-                    margin-left: 10px;
-                }
-
-            footer .cta {
-                margin-left: auto;
-            }
-
-                footer .cta button {
-                    border: 0;
-                    background: transparent;
-                }
-    </style>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="css/style.css" rel="stylesheet" />
+  <meta name="theme-color" content="#fafafa">
+  <title>Survey Form</title>
 </head>
 <body>
-    <h1>Survey Form</h1>
-    <h2>Flex Box Tutorial</h2>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+  <!-- Add your site or application content here -->
+  <h1>Survey Form</h1>
+  <h2>Flex Box Tutorial</h2>
 
-    <h2>Merry Christmas !!!</h2>
+  <h2>Merry Christmas !!!</h2>
 
-    <div id="box-container">
-        <div id="box-1"></div>
-        <div id="box-2"></div>
+  <div id="box-container">
+    <div id="box-1"></div>
+    <div id="box-2"></div>
+  </div>
+  <header>
+    <img src="https://freecodecamp.s3.amazonaws.com/quincy-twitter-photo.jpg" alt="Quincy Larson's profile picture" class="profile-thumbnail">
+    <div class="profile-name">
+      <h3>Quincy Larson</h3>
+      <h4>@ossia</h4>
     </div>
-    <header>
-        <img src="https://freecodecamp.s3.amazonaws.com/quincy-twitter-photo.jpg" alt="Quincy Larson's profile picture" class="profile-thumbnail">
-        <div class="profile-name">
-            <h3>Quincy Larson</h3>
-            <h4>@ossia</h4>
-        </div>
-        <div class="follow-btn">
-            <button>Follow</button>
-        </div>
-    </header>
-    <div id="inner">
-        <p>I meet so many people who are in search of that one trick that will help them work smart. Even if you work smart, you still have to work hard.</p>
-        <span class="date">1:32 PM - 12 Jan 2018</span>
-        <hr>
+    <div class="follow-btn">
+      <button>Follow</button>
     </div>
-    <footer>
-        <div class="stats">
-            <div class="Retweets">
-                <strong>107</strong> Retweets
-            </div>
-            <div class="likes">
-                <strong>431</strong> Likes
-            </div>
-        </div>
-        <div class="cta">
-            <button class="share-btn">Share</button>
-            <button class="retweet-btn">Retweet</button>
-            <button class="like-btn">Like</button>
-        </div>
-    </footer>
+  </header>
+  <div id="inner">
+    <p>I meet so many people who are in search of that one trick that will help them work smart. Even if you work smart, you still have to work hard.</p>
+    <span class="date">1:32 PM - 12 Jan 2018</span>
+    <hr>
+  </div>
+  <footer>
+    <div class="stats">
+      <div class="Retweets">
+        <strong>107</strong> Retweets
+      </div>
+      <div class="likes">
+        <strong>431</strong> Likes
+      </div>
+    </div>
+    <div class="cta">
+      <button class="share-btn">Share</button>
+      <button class="retweet-btn">Retweet</button>
+      <button class="like-btn">Like</button>
+    </div>
+  </footer>
+
+  <!-- Add your javascripts here -->
+  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
